tests/good/typing/034-func-arg-2.clap
** ('a -> 'b) -> ('b -> 'c) -> 'a -> 'c
def combine (f) (g) = (fun (x) => g (f (x)))
